# Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.py  download.py  requirements.txt
.github/workflows/: clang-format-check.yml
cmake/: VulkanEngineConfig.cmake
include/: Buffer.h  Command.h  Instance.h  Pipeline.h  Queue.h  Swapchain.h  Sync.h  Utils.h  Window.h
include/Engine/: Buffer.h  Command.h  Core.h  Core.ixx  Descriptor.h  Device.h  Image.h  Pipeline.h  Pool.h  Render.h  Sampler.h  Swapchain.h  Sync.h  Window.h
include/Graphic/: Base.h  Bloom.h  Blur.h  Blur.ixx  Buffer.h  Camera.h  Camera.ixx  CameraManager.h  CameraRTS.h  Command.h  Descriptor.h  Device.h  IBL.h  IBL.ixx  Image.h  Light.h  Light.ixx  LightManager.h  LightManager.ixx  Material.h  Material.ixx  Pipeline.h  Postprocessing.h  Postprocessing.ixx  Render.h  Shader.h  Shadow.h  Surface.h  Terrain.h  Texture.h  Texture.ixx  Window.h
include/Parts/: ComputePart.h  OffscreenPart.h  ScreenPart.h
include/Physics/: PhysicsManager.h
include/Primitive/: Cube.h  Cubemap.h  Cubemap.ixx  Drawable.h  Drawable.ixx  Equirectangular.h  Equirectangular.ixx  Light.h  LightManager.h  Line.h  Line.ixx  Mesh.h  Mesh.ixx  Model.h  Model.ixx  ModelManager.h  ParticleSystem.h  ParticleSystem.ixx  Shape3D.h  Shape3D.ixx  Skybox.h  Skybox.ixx  Sphere.h  Sprite.h  Sprite.ixx  SpriteManager.h  Terrain.h  Terrain.ixx  TerrainComposition.h  TerrainInterpolation.h  Texture.h  UniformStructs.h
include/Utility/: Animation.h  Animation.ixx  DebugVisualization.h  EngineState.h  GUI.h  GUI.ixx  GameState.h  Input.h  Input.ixx  Loader.h  Logger.h  PhysicsManager.h  RenderGraph.h  ResourceManager.h  ResourceManager.ixx  Settings.h  Settings.ixx  State.h  State.ixx  Timer.h  Timer.ixx
include/Vulkan/: Allocator.h  Buffer.h  Buffer.ixx  Command.h  Command.ixx  Debug.h  Descriptor.h  Descriptor.ixx  Device.h  Device.ixx  Filesystem.h  Image.h  Image.ixx  Instance.h  Instance.ixx  Pipeline.h  Pipeline.ixx  Pool.h  Pool.ixx  Render.h  Render.ixx  Sampler.h  Sampler.ixx  Shader.h  Shader.ixx  Surface.h  Swapchain.h  Swapchain.ixx  Sync.h  Sync.ixx  Utils.ixx  Window.h  Window.ixx
samples/IBL/: CMakeLists.txt  README.md  download.py
samples/android/: .gitignore  README.md
samples/android/app/src/main/cpp/: CMakeLists.txt
samples/android/app/src/main/cpp/include/: DebugVisualization.h
samples/android/app/src/main/cpp/src/: DebugVisualization.cpp  main.cpp
samples/geodata/: CMakeLists.txt  README.md  download.py
samples/geodata/include/: Main.h
samples/geodata/src/: Main.cpp
samples/model/: CMakeLists.txt  README.md  download.py
samples/particleSystem/: download.py
samples/particles/: CMakeLists.txt  README.md
samples/postprocessing/: CMakeLists.txt  README.md
samples/scene/: CMakeLists.txt  README.md  download.py
samples/scene/include/: DebugVisualization.h  Main.h
samples/scene/src/: DebugVisualization.cpp  Main.cpp
samples/scene/tests/: load.py
samples/shadow/: CMakeLists.txt  README.md  download.py
samples/shape/: CMakeLists.txt  README.md  download.py
samples/simple/: CMakeLists.txt  README.md
samples/sprite/: CMakeLists.txt  README.md  download.py
samples/terrain/: CMakeLists.txt  README.md
samples/terrain/include/: Main.h
samples/terrain/src/: Main.cpp
shaders/: GLTF3D.frag  GLTF3D.vert  blur.comp  blurHorizontal.comp  blurVertical.comp  cubeColor.frag  cubeColor.vert  cubeColorDebug.frag  cubeDebug.frag  cubeDebug.vert  cubeNormal.vert  cubePBR.frag  cubePhong.frag  cubePhong.vert  cubePhongDebug.frag  cubeTangent.vert  debugPBR2D.frag  debugPBR3D.frag  debugPhong2D.frag  debugPhong3D.frag  depth2D.frag  depth2D.vert  depth3D.frag  depth3D.vert  final.frag  final.vert  grayscale.comp  grayscale.frag  normal.tese  particle.comp  particle.frag  particle.vert  pbr.glsl  pbr2D.frag  pbr3D.frag  pbr3D.vert  phong.glsl  phong2D.frag  phong2D.vert  phong3D.frag  (+37 more)
shaders/IBL/: skyboxDiffuse.frag  skyboxDiffuse.vert  skyboxEquirectangular.frag  skyboxEquirectangular.vert  skyboxSpecular.frag  skyboxSpecular.vert  specularBRDF.vert
shaders/UI/: ui.vert
shaders/line/: line.vert
shaders/model/: modelColor.frag  modelColor.vert  modelDepth.vert  modelPBR.frag  modelPBR.vert  modelPhong.frag  modelPhong.vert
shaders/particles/: particle.comp  particle.frag
shaders/postprocessing/: blurHorizontal.comp  blurHorizontal.frag  blurVertical.frag
shaders/shape/: cubeColor.frag  cubeColor.vert  cubeDepth.vert  cubeDepthPoint.frag  cubeNormal.frag  cubeNormal.geom  cubeNormal.vert  cubePBR.frag  cubePhong.frag  cubePhong.vert  cubeTangent.vert  sphereColor.frag  sphereColor.vert  sphereDepthDirectional.frag  sphereDepthPoint.frag  spherePBR.frag  spherePhong.frag  spherePhong.vert
shaders/skybox/: skybox.frag  skybox.vert
shaders/sprite/: spriteColor.frag  spriteColor.vert  spriteDepth.vert  spriteDepthDirectional.frag  spriteDepthDirectionalColor.frag  spriteDepthDirectionalPBR.frag  spriteDepthDirectionalPhong.frag  spriteDepthPoint.frag  spriteDepthPointColor.frag  spriteDepthPointPBR.frag  spriteDepthPointPhong.frag  spriteNormal.vert  spritePBR.frag  spritePBR.vert  spritePhong.frag  spritePhong.vert  spriteTangent.vert
shaders/terrain/: terrainCPU.frag  terrainCPU.vert  terrainColor.frag  terrainColor.tesc  terrainColor.tese  terrainDebug.frag  terrainDebug.tesc  terrainDebug.tese  terrainDebug.vert  terrainDepth.frag  terrainDepth.tesc  terrainDepth.tese  terrainDepthDirectional.frag  terrainDepthPoint.frag  terrainNormal.geom  terrainNormal.tese  terrainPBR.frag  terrainPhong.frag  terrainPhong.tese  terrainTangent.tese
src/: Buffer.cpp  Command.cpp  Pipeline.cpp  Queue.cpp  Shader.cpp  Source.cpp
src/Engine/: Buffer.cpp  Command.cpp  Core.cpp  Descriptor.cpp  Device.cpp  Image.cpp  Instance.cpp  Pipeline.cpp  Pool.cpp  Render.cpp  Sampler.cpp  Shader.cpp  Surface.cpp  Swapchain.cpp  Sync.cpp  Utils.cpp  Window.cpp
src/Entry/: Source.cpp
src/Graphic/: Base.cpp  Bloom.cpp  Blur.cpp  Buffer.cpp  Camera.cpp  CameraManager.cpp  CameraRTS.cpp  Command.cpp  Device.cpp  (+17 more)
(+100 files in other folders)
